Добавляет исправление в хедере

--- a/index.html
+++ b/index.html
@@ -211,28 +211,28 @@
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,28 +248,28 @@
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,28 +285,28 @@
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -322,28 +322,28 @@
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="sociallink" href="#">
                       <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
