--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
         <nav class="site-nav">
           <ul class="header_nav">
             <li class="item">
-              <a href="./index.html" class="link accent_nav liner">Студия</a>
+              <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="link accent_nav liner">Портфолио</a>
             </li>
             <li class="item">
               <a href="#" class="link">Контакты</a>
