--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
         <nav class="site-nav">
           <ul class="header_nav">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="header-nav__link">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link accent_nav liner">Портфолио</a>
+              <a href="./portfolio.html" class="header-nav__link accent_nav liner">Портфолио</a>
             </li>
             <li class="item">
-              <a href="#" class="link">Контакты</a>
+              <a href="#" class="header-nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
