--- a/portfolio.html
+++ b/portfolio.html
@@ -22,38 +22,38 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header class="site_header">
+    <header class="site-header">
       <div class="container site-nav">
         <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
         <nav class="site-nav">
-          <ul class="header_nav">
-            <li class="item">
+          <ul class="header-nav">
+            <li class="header-nav__item">
               <a href="./index.html" class="header-nav__link">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="header-nav__link accent_nav liner">Портфолио</a>
+            <li class="header-nav__item header-nav__item--append">
+              <a href="./portfolio.html" class="header-nav__link header-nav__link--active"
+                >Портфолио</a
+              >
             </li>
-            <li class="item">
+            <li class="header-nav__item header-nav__item--append">
               <a href="#" class="header-nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact_list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon-mail" width="16" height="12">
-                <use href="./images/icons.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com
-            </a>
+        <ul class="contact-list">
+          <li class="contact-list__item">
+            <a href="mailto:info@devstudio.com" class="contact-list__link"
+              ><svg class="contact_list__icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link">
-              <svg class="icon-phone" width="10" height="16">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
+          <li class="contact-list__item contact-list__item--append">
+            <a href="tel:+380961111111" class="contact-list__link"
+              ><svg class="contact_list__icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
