--- a/portfolio.html
+++ b/portfolio.html
@@ -63,47 +63,46 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
-          <ul class="pf_filter">
-            <li class="item">
-              <button type="button" class="btn">Все</button>
+          <ul class="pf-filter list">
+            <li class="pf-filter__item pf-filter__item--append">
+              <button type="button" class="button pf-filter__btn">Все</button>
             </li>
-            <li class="item">
-              <button type="button" class="btn">Веб-сайты</button>
+            <li class="pf-filter__item pf-filter__item--append">
+              <button type="button" class="button pf-filter__btn">Веб-сайты</button>
             </li>
-            <li class="item">
-              <button type="button" class="btn">Приложения</button>
+            <li class="pf-filter__item pf-filter__item--append">
+              <button type="button" class="button pf-filter__btn">Приложения</button>
             </li>
-            <li class="item">
-              <button type="button" class="btn">Дизайн</button>
+            <li class="pf-filter__item pf-filter__item--append">
+              <button type="button" class="button pf-filter__btn">Дизайн</button>
             </li>
-            <li class="item">
-              <button type="button" class="btn">Маркетинг</button>
+            <li class="pf-filter__item pf-filter__item--append">
+              <button type="button" class="button pf-filter__btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="pf_list">
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+          <ul class="product-cart__wraper">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img1.jpg" alt="" width="370" />
                 </div>
-
-                <div class="cart_text">
-                  <h2 class="name">Технокряк</h2>
-                  <p class="products">Веб-сайт</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Технокряк</h2>
+                  <p class="cart-footer__products text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
@@ -111,127 +110,127 @@
                   <img src="./images/pf-img2.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
-                  <h2 class="name">Постер New Orlean vs Golden Star</h2>
-                  <p class="products">Дизайн</p>
+                  <h2 class="cart-footer__name tittle">Постер New Orlean vs Golden Star</h2>
+                  <p class="cart-footer__products text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img3.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Ресторан Seafood</h2>
-                  <p class="products">Приложение</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Ресторан Seafood</h2>
+                  <p class="cart-footer__products text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img4.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Проект Prime</h2>
-                  <p class="products">Маркетинг</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Проект Prime</h2>
+                  <p class="cart-footer__products text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img5.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Проект Boxes</h2>
-                  <p class="products">Приложение</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Проект Boxes</h2>
+                  <p class="cart-footer__products text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img6.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Inspiration has no Borders</h2>
-                  <p class="products">Веб-сайт</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Inspiration has no Borders</h2>
+                  <p class="cart-footer__products text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img7.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Издание Limited Edition</h2>
-                  <p class="products">Дизайн</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Издание Limited Edition</h2>
+                  <p class="cart-footer__products text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img8.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Проект LAB</h2>
-                  <p class="products">Маркетинг</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Проект LAB</h2>
+                  <p class="cart-footer__products text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="pf_cart">
-              <a href="#" class="pf_link">
-                <div class="product_thumb">
-                  <div class="product_overlay">
-                    <p class="text">
+            <li class="product-cart">
+              <a href="#" class="product-cart__link">
+                <div class="cart-header">
+                  <div class="product-cart__overlay">
+                    <p class="text cart-header__text">
                       По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
                       который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img9.jpg" alt="" width="370" />
                 </div>
-                <div class="cart_text">
-                  <h2 class="name">Growing Business</h2>
-                  <p class="products">Приложение</p>
+                <div class="cart-footer">
+                  <h2 class="cart-footer__name tittle">Growing Business</h2>
+                  <p class="cart-footer__products text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -241,60 +240,62 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container footer_box">
-        <div class="item ftr_address">
+      <div class="container footer-box">
+        <div class="footer-box__item footer-box__item--prepend">
           <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-          <address class="address">
-            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list">
-              <li class="footer_contact">
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <address class="footer-address">
+            <p class="footer-address__text text">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="address-post list">
+              <li class="address-post__item address-post__item--prepend">
+                <a href="mailto:info@devstudio.com" class="address-post__link"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="footer_contact">
-                <a href="tel:+380961111111" class="link">+380961111111</a>
+              <li class="address-post__item">
+                <a href="tel:+380961111111" class="address-post__link">+380961111111</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="item">
-          <p class="ftr_text">ПРИСОЕДЕНЯЙТЕСЬ</p>
-          <ul class="ftr_soclist">
-            <li class="ftr_item">
-              <a class="ftr_sociallink" href="#">
-                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+        <div class="footer-box__item">
+          <p class="footer-box__tittle text">ПРИСОЕДЕНЯЙТЕСЬ</p>
+          <ul class="footer-soclist list">
+            <li class="footer-soclist__item footer-soclist__item--prepend">
+              <a class="footer-soclist__link" href="#">
+                <svg class="footer-soclist__icon" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="ftr_item">
-              <a class="ftr_sociallink" href="#">
-                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+            <li class="footer-soclist__item footer-soclist__item--prepend">
+              <a class="footer-soclist__link" href="#">
+                <svg class="footer-soclist__icon" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="ftr_item">
-              <a class="ftr_sociallink" href="#">
-                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+            <li class="footer-soclist__item footer-soclist__item--prepend">
+              <a class="footer-soclist__link" href="#">
+                <svg class="footer-soclist__icon" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="ftr_item">
-              <a class="ftr_sociallink" href="#">
-                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+            <li class="footer-soclist__item">
+              <a class="footer-soclist__link" href="#">
+                <svg class="footer-soclist__icon" width="20" height="20" viewBox="0 0 20 20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="item ftr_inmail">
-          <p class="ftr_text">Подпишитесь на рассылку</p>
-          <form class="ftr_form">
-            <input class="ftr_input" type="text" placeholder="E-mail" />
-            <button type="submit" class="ftr_inpbtn">
-              Подписаться<svg class="ftr_btnsend" width="24" height="24" viewBox="0 0 24 24">
+        <div class="footer-box__item footer-box__item--append">
+          <p class="footer-box__tittle text">Подпишитесь на рассылку</p>
+          <form class="footer-box__form">
+            <input class="footer-box__input" type="text" placeholder="E-mail" />
+            <button type="submit" class="footer-box__btn button">
+              Подписаться<svg class="btn__icon--append" width="24" height="24" viewBox="0 0 24 24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
